# WatchDog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  alert.sh
assets/: Judge.txt
ctl/: watchdogctl.cpp
daemon/: watchdogd.c
systemd/: watchdog.service
